--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: single
 author_profile: true
 ---
 
-<figure style="width: 580px" class="align-center">
+<figure class="align-center">
 <img src="{{ site.url }}{{ site.baseurl }}/images/alben2022.jpg" alt="">
   <figcaption><b>Mount Alben</b> -  April 2022</figcaption>
 </figure>
